<resources>
    <string name="app_name">Visualiser</string>
    <string name="main_new_graf">Создать новый граф</string>
    <string name="main_load_graf">Загрузить граф</string>
    <string name="main_settings">Настройки</string>
    <string name="main_description">Описание</string>
    <string name="main_exit">Выйти</string>
    <string name="new_graph_create">Создать граф</string>
    <string name="new_graph_1" translatable="false"> 1</string>
    <string name="new_graph_plus" translatable="false">+</string>
    <string name="new_graph_minus" translatable="false">-</string>
    <string name="new_graph_neor">Неориентированный граф</string>
    <string name="new_graph_or">Ориентированный граф</string>
    <string name="visualaser_set">Задать число</string>
    <string name="visualaser_save">Сохранить граф</string>
    <string name="visualaser_kruskal">Найти остовное дерево</string>
    <string name="visualaser_return">Вернуть</string>
    <string name="settings_lang">Выберите язык:</string>
    <string name="settings_ru" translatable="false">Русский</string>
    <string name="settings_en" translatable="false">English</string>
    <string name="settings_uk" translatable="false">Українська</string>
    <string name="description">
        Описание\n
    Задача программы заключается в том, чтобы визуализировать графы,
        необходимые в учебных и прикладных целях.
        \n Принцип работы программы: задается матрица смежности(таблица, в которой можно устанавливать и сбрасывать поля).
        Матрица смежности — один из способов представления математического графа в виде матрицы.
    Количество строк и столбцов - это количество вершин в графе. Элементы этой таблицы - это наличие ребер,
        т. е., если элемент из i-той строки и j-того столбца установлен, то говорят, что из вершины i идет направленное ребро(ориентированное,
    или же как еще называют - дуга) в j вершину. Если, в свою очередь, из j-ой в i-тую вершину тоже идет ребро, то оба ребра обозначаются
    как одно и говорят, что это неориентированное ребро(в две стороны). В случае, если мы установим, что из i вершины ребро идет в i вершину,
        то ребро будет заходить в ту же вершину, из которой она и вышла. В теории графов это называется петлей.\n
        Чтобы увеличить количество вершин графа, достаточно при его создании нажать кнопку "+", чтобы убрать одну вершину, нужно
        нажать кнопку "-". Если получившаяся матрица будет симметричной - то на выходе мы получим неориентированный граф, состоящий
        только из неор. ребер, иначе ориентированный, в котором будут присутствовать направленные дуги.
        Как только заполнение матрицы смежности готово, нужно нажать на кнопку "создать граф".\n
        На новом экране вам предстанет граф, который вы сотворили. Если же результат неудовлетворителен, можно вернуться
        к предыдущему экрану.
        На данном экране видны окружности, внутрь которых вписаны числа - это вершины графа. Для удобства их можно двигать и
        переставлять с места на место. Между вершинами установлены ребра(если, конечно, матрица на предыдущем экране не осталась пустой).
        Если ребро сплошное - значит оно неориентированное(смотрит в две стороны). Если ребро состоит из стрелочек - значит это дуга.\n
        По середине каждого ребра есть некоторое число - это вес ребра. В некоторых задачах этот вес принимается за расстояние между
        населенными пунктами, время и т.д. Если же нажать на какой-либо вес, то этот вес загорится и поменяет цвет на красный.
        Выделенный вес можно поменять, внеся некоторое значение в поле внизу и нажав на кнопку ввести число. Если же ни одно из ребер не
        выделено, то ничего не произойдет.\n
        Граф, у которого имеются веса ребер называется взвешенным. Такие графы очень полезны при построении логистических маршрутов между
        населенными пунктами, прокладки инфраструктуры и т.д.\n
        Также имеется кнопки построения остовного дерева(с помощью алгоритма Крускала)и возврата к изначальному состоянию графа.\n
        Минимальное остовное дерево (или минимальное покрывающее дерево) в связанном взвешенном графе — это остовное
        дерево этого графа, имеющее минимальный возможный вес, где под весом дерева понимается сумма весов входящих в него рёбер. \n\n\n\n\n\n\n\n\n.
    </string>
</resources>