<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Text"
            android:text="@string/settings_lang"
            android:layout_marginTop="40dp"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:id="@+id/enButt"
            style="@style/Butt"
            android:text="@string/settings_en"
            android:layout_marginTop="10dp" />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:id="@+id/ruButt"
            style="@style/Butt"
            android:text="@string/settings_ru"
            android:layout_marginTop="10dp" />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:id="@+id/ukButt"
            style="@style/Butt"
            android:text="@string/settings_uk"
            android:layout_marginTop="10dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>