<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <Button
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:id="@+id/main_new_graf"
            style="@style/Butt"
            android:text="@string/main_new_graf"
            android:layout_marginTop="50dp" />

<!--        <Button-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_width="200dp"-->
<!--            android:id="@+id/main_load_graf"-->
<!--            style="@style/Butt"-->
<!--            android:text="@string/main_load_graf"-->
<!--            android:layout_marginTop="20dp" />-->

        <Button
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:id="@+id/main_settings"
            style="@style/Butt"
            android:text="@string/main_settings"
            android:layout_marginTop="20dp" />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:id="@+id/main_description"
            style="@style/Butt"
            android:text="@string/main_description"
            android:layout_marginTop="20dp" />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:id="@+id/main_exit"
            style="@style/Butt"
            android:text="@string/main_exit"
            android:layout_marginTop="20dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>