<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewGraphActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <Button
            android:id="@+id/create_graph"
            style="@style/Butt"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/new_graph_create" />

        <TextView
            android:id="@+id/graph_text_neor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            style="@style/Text"
            android:text="@string/new_graph_neor" />
        <TextView
            android:id="@+id/graph_text_or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            style="@style/Text"
            android:text="@string/new_graph_or" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="1dp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="7dp">

        <TableRow
            android:id="@+id/tableRow0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text"/>
            <TextView
                android:id="@+id/textView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_graph_1"
                style="@style/Text"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_graph_1"
                style="@style/Text"/>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text"/>
            <Button
                android:id="@+id/btnMinus"
                style="@style/BtnPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="40dip"
                android:minHeight="40dip"
                android:text="@string/new_graph_minus" />

            <Button
                android:id="@+id/btnPlus"
                style="@style/BtnPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="40dip"
                android:minHeight="40dip"
                android:text="@string/new_graph_plus" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>